# fastrtc-turnsense

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: requirements.txt  voice_chat.py
src/fastrtc_turnsense/: __about__.py  __init__.py
tests/: __init__.py
tests/test_fastrtc_turnsense/: __init__.py  test_detector.py
